--- a/home.html
+++ b/home.html
@@ -8,39 +8,48 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     
     <style>
-        .navbar{
-            z-index: 10;
+        body{
+            background-color: beige;
         }
         .carousel-item img {
             height: 100vh;
-            object-fit: cover;
         }
         .carousel {
             z-index: 5;
             top: 0;
         }
         .carousel-item {
-          height: 450px;
-          background-color: black;
+            height: 450px;
+            background-color: black;
         }
         .carousel-control-prev-icon,
         .carousel-control-next-icon {
-          filter: invert(100%);
+            filter: invert(100%);
         }   
         .carousel-indicators [data-bs-target] {
-          background-color: white;
+            background-color: white;
         }   
-        .card-img-top {
-          height: 250px;
-          object-fit: cover;
+        .carousel-caption{
+            color: white;
         }
         .carousel-caption{
-          color: white;
+            background-color: black;
+            opacity: 0.5;
+            margin: 0;
+            z-index: 5;
         }
-        body{
-            background-color: beige;
+        .card-img-top {
+            height: 250px;
+            object-fit: cover;
+        }
+        .navbar{
+            z-index: 10;
         }
         .nav-link {
+            color: white;
+        }
+        .navbar-nav .nav-link:hover {
+            background-color: rgba(128, 128, 128, 0.3); 
             color: white;
         }
         .nav-item.dropdown:hover .dropdown-menu {
@@ -50,22 +59,6 @@
         .dropdown-menu {
             display: none; 
             transition: all 0.3s ease-in-out;
-        }
-        .navbar-nav .nav-link:hover {
-            background-color: rgba(128, 128, 128, 0.3); 
-            color: white;
-        }
-        h5,p{
-            color: white;
-            opacity: 1;
-        }
-        .carousel-caption{
-            background-color: black;
-            opacity: 0.5;
-            margin: 0;
-            z-index: 5;
-        }
-        .dropdown-menu {
             background-color: rgba(0, 0, 0, 0.5);
             border: none; 
         }
@@ -75,6 +68,13 @@
         .dropdown-item:hover {
           background-color: rgba(255, 255, 255, 0.2); 
           color: white;
+        }
+        h5,p{
+            color: white;
+            opacity: 1;
+        }
+        img{
+            opacity: 50%;
         }
     </style>
 </head>
@@ -92,8 +92,8 @@
                             Food
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#">Sausage</a></li>
-                          <li><a class="dropdown-item" href="#">Schnitzel</a></li>
+                          <li><a class="dropdown-item" href="#sausage">Sausage</a></li>
+                          <li><a class="dropdown-item" href="#schnitzel">Schnitzel</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link active" href="#minuman">Drink</a></li>
@@ -117,24 +117,24 @@
 
         <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="Sosis.jpg" class="d-block" style="width:100%">
+            <img src="picture/Sosis.jpg" class="d-block" style="width:100%">
             <div class="carousel-caption">
-              <h5>Uluwatu Temple</h5>
-              <p>A stunning cliffside temple with ocean views.</p>
+              <h5>Sausage</h5>
+              <p>Very delicious typical German sausage.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="schnitzel.jpg" class="d-block" style="width:100%">
+            <img src="picture/schnitzel.jpg" class="d-block" style="width:100%">
             <div class="carousel-caption">
-              <h5>Tegalalang Rice Terrace</h5>
-              <p>Lush green rice fields in Ubud.</p>
+              <h5>Schnitzel</h5>
+              <p>A thin slice of meat fried in breadcrumbs.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="sosis1.jpg" class="d-block" style="width:100%">
+            <img src="picture/Currywurst.jpg" class="d-block" style="width:100%">
             <div class="carousel-caption">
-              <h5>Balinese Dance</h5>
-              <p>Experience traditional Balinese performances.</p>
+              <h5>Currywurst</h5>
+              <p>The sausages are cut into pieces, then doused in tomato sauce <br>with curry seasoning, and sprinkled with curry powder.</p>
             </div>
         </div>
         </div>
