--- a/home.html
+++ b/home.html
@@ -79,9 +79,9 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-transparent shadow-sm position-absolute w-100 navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-transparent position-absolute w-100 navbar-dark">
         <div class="container">
-            <a class="navbar-brand text-primary fw-bold" href="#website">gutes Essen</a>
+            <a class="navbar-brand text-primary fw-bold" href="#">gutes Essen</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
                 <span class="navbar-toggler-icon"></span>
             </button>
