--- a/Sosis.html
+++ b/Sosis.html
@@ -5,9 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sosis Jerman</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Montserrat', Arial, sans-serif;
@@ -135,7 +132,7 @@
 <body>
   <nav class="navbar navbar-expand-lg fixed-top position-absolute navbar-dark">
     <div class="container-fluid px-4">
-      <a class="navbar-brand fw-bold" href="#">gutes Essen</a>
+      <a class="navbar-brand fw-bold" href="home.html">gutes Essen</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
         <span class="navbar-toggler-icon"></span>
       </button>
