--- a/Sosis.html
+++ b/Sosis.html
@@ -153,7 +153,7 @@
     </div>
   </nav>
 
-  <img src="picture/BgSosis.jpg" alt="Sosis Jerman" class="hero-image w-100">
+  <img src="img/BgSosis.jpg" alt="Sosis Jerman" class="hero-image w-100">
 
   <div class="content container">
     <h1 class="section-title">Sosis Terkenal di Jerman</h1>
@@ -171,14 +171,14 @@
       <b>Fun Fact:</b> Orang Jerman rata-rata mengonsumsi lebih dari <b>60 kg sosis per tahun</b>. Bahkan, di Berlin ada museum khusus Currywurst!
     </div>
 
-    <img src="picture/BgSosis1.webp" alt="Currywurst" class="img-sosis">
+    <img src="img/BgSosis1.webp" alt="Currywurst" class="img-sosis">
 
     <h2 class="gallery-title">Galeri Sosis Jerman</h2>
     <div class="gallery">
-      <img src="picture/Bratwurst.jpg" alt="Bratwurst">
-      <img src="picture/Currywurst.jpg" alt="Currywurst">
-      <img src="picture/Weisswurst.jpg" alt="Weisswurst">
-      <img src="picture/Bockwurst.jpg" alt="Bockwurst">
+      <img src="img/Bratwurst.jpg" alt="Bratwurst">
+      <img src="img/Currywurst.jpg" alt="Currywurst">
+      <img src="img/Weisswurst.jpg" alt="Weisswurst">
+      <img src="img/Bockwurst.jpg" alt="Bockwurst">
     </div>
 
     <div class="tips-box">
