--- a/Sosis.html
+++ b/Sosis.html
@@ -14,7 +14,6 @@
     }
     .navbar {
       background-color: rgba(0, 0, 0, 0.8);
-      border: none;
     }
     .nav-link, .navbar-brand {
       color: #fff;
@@ -26,14 +25,29 @@
       border-radius: 5px;
       transition: 0.3s;
     }
+    .nav-item.dropdown:hover .dropdown-menu {
+      display: block;
+      margin-top: 0;
+    }
+    .dropdown-menu {
+      display: none;
+      transition: all 0.3s ease-in-out;
+      background-color: rgba(0, 0, 0, 0.5);
+      border: none;
+    }
+    .dropdown-item {
+      color: white;
+    }
+    .dropdown-item:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+      color: white;
+    }
     .hero-image {
       width: 100%;
       max-height: 400px;
       object-fit: cover;
-      margin-top: 56px;
       filter: brightness(0.85);
       box-shadow: 0 4px 24px rgba(0,0,0,0.08);
-      animation: 1.5s;
     }
     .content {
       padding: 2rem 0;
@@ -55,7 +69,7 @@
       padding: 18px 20px;
       border-radius: 10px;
       font-style: italic;
-      margin: 2rem 0 2rem 0;
+      margin: 2rem 0;
       font-size: 1.1rem;
       box-shadow: 0 2px 10px rgba(0,0,0,0.03);
     }
@@ -86,17 +100,39 @@
       justify-content: center;
       margin-bottom: 2.5rem;
     }
-    .gallery img {
+    .gallery-item {
+      position: relative;
+      overflow: hidden;
+      border-radius: 10px;
+    }
+    .gallery-item img {
       width: 170px;
       height: 120px;
       object-fit: cover;
       border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+      transition: transform 0.3s, box-shadow 0.3s;
     }
-    .gallery img:hover {
+    .gallery-item:hover img {
       transform: scale(1.07);
       box-shadow: 0 4px 18px rgba(0,0,0,0.15);
     }
+    .btn-below {
+      display: block;
+      margin-top: 8px;
+      text-align: center;
+      background: rgba(0, 0, 0, 0.6);
+      color: white;
+      padding: 6px 12px;
+      border-radius: 6px;
+      font-size: 0.9rem;
+      font-weight: 500;
+      text-decoration: none;
+    }
+
+    .btn-below:hover {
+      background: rgba(0, 0, 0, 0.8);
+    }
+
     .tips-box {
       background: #e3f7f7;
       padding: 18px 20px;
@@ -124,13 +160,13 @@
       color: #fff;
       text-decoration: underline;
     }
-    .navbar-brand{
-        color: rgb(0, 140, 255);
+    .navbar-brand {
+      color: rgb(0, 140, 255);
     }
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg fixed-top position-absolute navbar-dark">
+  <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
     <div class="container-fluid px-4">
       <a class="navbar-brand fw-bold" href="home.html">gutes Essen</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
@@ -138,6 +174,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Food</a>
             <ul class="dropdown-menu">
@@ -147,7 +184,7 @@
           </li>
           <li class="nav-item"><a class="nav-link" href="#minuman">Drink</a></li>
           <li class="nav-item"><a class="nav-link" href="#fakta">Fact</a></li>
-          <li class="nav-item"><a class="nav-link" href="#kontak">Contact Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="#kontak">About Us</a></li>
         </ul>
       </div>
     </div>
@@ -175,10 +212,22 @@
 
     <h2 class="gallery-title">Galeri Sosis Jerman</h2>
     <div class="gallery">
-      <img src="img/Bratwurst.jpg" alt="Bratwurst">
-      <img src="img/Currywurst.jpg" alt="Currywurst">
-      <img src="img/Weisswurst.jpg" alt="Weisswurst">
-      <img src="img/Bockwurst.jpg" alt="Bockwurst">
+      <div class="gallery-item">
+        <img src="img/Bratwurst.jpg" alt="Bratwurst">
+        <a href="MenuSosis.html#bratwurst" class="btn-below">Explore</a>
+      </div>
+      <div class="gallery-item">
+        <img src="img/Currywurst.jpg" alt="Currywurst.jpg">
+        <a href="MenuSosis.html#currywurst.jpg" class="btn-below">Explore</a>
+      </div>
+      <div class="gallery-item">
+        <img src="img/weisswurst.jpg" alt="weisswurst">
+        <a href="MenuSosis.html#weisswurst" class="btn-below">Explore</a>
+      </div>
+      <div class="gallery-item">
+        <img src="img/Bockwurst.jpg" alt="bockwrust">
+        <a href="MenuSosis.html#bockwrust" class="btn-below">Explore</a>
+      </div>
     </div>
 
     <div class="tips-box">
@@ -194,6 +243,7 @@
     <a href="#" class="back-to-top">↑ Back to top</a>
     <p>Copyright by ©gutes Essen 2025. All rights reserved.</p>
   </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
