--- a/home.html
+++ b/home.html
@@ -8,9 +8,42 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <style>
-        .navbar {
-            z-index: 10;
-        }
+        body {
+      font-family: 'Montserrat', Arial, sans-serif;
+      background: linear-gradient(135deg, #f8fafc 60%, #e0e7ef 100%);
+      margin: 0;
+      padding: 0;
+    }
+    .navbar {
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+    .nav-link, .navbar-brand {
+      color: #fff;
+      font-weight: 500;
+      letter-spacing: 1px;
+    }
+    .nav-link:hover {
+      background-color: rgba(255, 255, 255, 0.15);
+      border-radius: 5px;
+      transition: 0.3s;
+    }
+    .nav-item.dropdown:hover .dropdown-menu {
+      display: block;
+      margin-top: 0;
+    }
+    .dropdown-menu {
+      display: none;
+      transition: all 0.3s ease-in-out;
+      background-color: rgba(0, 0, 0, 0.5);
+      border: none;
+    }
+    .dropdown-item {
+      color: white;
+    }
+    .dropdown-item:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+      color: white;
+    }
         .carousel-item img {
             height: 100vh;
             object-fit: cover;
@@ -45,33 +78,6 @@
             opacity: 0.5;
             margin: 0;
             z-index: 5;
-        }
-        body {
-            background-color: #fff;
-        }
-        .nav-link {
-            color: white;
-        }
-        .nav-item.dropdown:hover .dropdown-menu {
-            display: block;
-            margin-top: 0;
-        }
-        .dropdown-menu {
-            display: none;
-            transition: all 0.3s ease-in-out;
-            background-color: rgba(0, 0, 0, 0.5);
-            border: none;
-        }
-        .navbar-nav .nav-link:hover {
-            background-color: rgba(128, 128, 128, 0.3);
-            color: white;
-        }
-        .dropdown-item {
-            color: white;
-        }
-        .dropdown-item:hover {
-            background-color: rgba(255, 255, 255, 0.2);
-            color: white;
         }
         .post-card {
             box-shadow: 0 8px 32px rgba(0,0,0,0.25);
@@ -128,30 +134,28 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-transparent position-absolute w-100 navbar-dark">
-        <div class="container-fluid px-4">
-            <a class="navbar-brand text-primary fw-bold" href="#website">gutes Essen</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Food
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="Sosis.html">Sausage</a></li>
-                            <li><a class="dropdown-item" href="#">Schnitzel</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link active" href="#minuman">Drink</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#fakta">Fact</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#kontak">Contact Us</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
+    <div class="container-fluid px-4">
+      <a class="navbar-brand fw-bold" href="home.html">gutes Essen</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarContent">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Food</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="Sosis.html">Sausage</a></li>
+              <li><a class="dropdown-item" href="#">Schnitzel</a></li>
+            </ul>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="#minuman">Drink</a></li>
+          <li class="nav-item"><a class="nav-link" href="#fakta">Fact</a></li>
+          <li class="nav-item"><a class="nav-link" href="#kontak">About Us</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
     <div id="imgCarousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
         <div id="demo" class="carousel slide " data-bs-ride="carousel">
