--- a/Sosis.html
+++ b/Sosis.html
@@ -218,7 +218,7 @@
       </div>
       <div class="gallery-item">
         <img src="img/Currywurst.jpg" alt="Currywurst.jpg">
-        <a href="MenuSosis.html#currywurst.jpg" class="btn-below">Explore</a>
+        <a href="MenuSosis.html#currywurst" class="btn-below">Explore</a>
       </div>
       <div class="gallery-item">
         <img src="img/weisswurst.jpg" alt="weisswurst">
@@ -226,7 +226,7 @@
       </div>
       <div class="gallery-item">
         <img src="img/Bockwurst.jpg" alt="bockwrust">
-        <a href="MenuSosis.html#bockwrust" class="btn-below">Explore</a>
+        <a href="MenuSosis.html#bockwurst" class="btn-below">Explore</a>
       </div>
     </div>
 
