--- a/MenuSchnitzel.html
+++ b/MenuSchnitzel.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Menu Sosis Jerman</title>
+  <title>Menu Schnitzel Jerman</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -53,11 +53,11 @@
         background-color: rgba(255, 255, 255, 0.2);
         color: white;
     }
-    .sosis-section {
+    .schnitzel-section {
       padding: 60px 20px;
     }
 
-    .sosis-card {
+    .schnitzel-card {
       background-color: #ffffff;
       border-radius: 12px;
       box-shadow: 0 3px 8px rgba(0,0,0,0.1);
@@ -67,13 +67,13 @@
 
     }
 
-    .sosis-card img {
+    .schnitzel-card img {
       height: 100%;
       object-fit: cover;
       width: 100%;
     }
 
-    .sosis-content {
+    .schnitzel-content {
       padding: 30px;
     }
 
@@ -100,11 +100,11 @@
     }
 
     @media (min-width: 768px) {
-      .sosis-row {
+      .schnitzel-row {
         display: flex;
         align-items: center;
       }
-      .sosis-row:nth-child(even) .sosis-image {
+      .schnitzel-row:nth-child(even) .schnitzel-image {
         order: 2;
       }
     }
@@ -139,50 +139,50 @@
   </nav>
   
   <!-- Page Content -->
-  <div class="container sosis-section">
-    <h2>Menu Sosis Terkenal di Jerman</h2>
+  <div class="container schnitzel-section">
+    <h2>Menu schnitzel Terkenal di Jerman</h2>
 
-    <!-- Bratwurst -->
-    <div class="sosis-card sosis-row">
-      <div class="col-md-6 sosis-image" id="bratwurst">
-        <img src="img/bratwurst.jpg" alt="Bratwurst">
+    <!-- Wiener Schnitzel -->
+    <div class="schnitzel-card schnitzel-row">
+      <div class="col-md-6 schnitzel-image" id="wienerschnitzel">
+        <img src="img/Wiener Schnitzel.jpg" alt="wienerschnitzel">
       </div>
-      <div class="col-md-6 sosis-content">
-        <h4>Bratwurst</h4>
-        <p>Sosis khas Jerman yang biasanya dipanggang dan disajikan dengan roti atau sauerkraut. Berasal dari Nürnberg, Bratwurst memiliki rasa gurih dan aroma rempah yang khas. Cocok disantap dengan mustard pedas!</p>
+      <div class="col-md-6 schnitzel-content">
+        <h4>Wiener Schnitzel</h4>
+        <p>schnitzel khas Jerman yang biasanya dipanggang dan disajikan dengan roti atau sauerkraut. Berasal dari Nürnberg, Bratwurst memiliki rasa gurih dan aroma rempah yang khas. Cocok disantap dengan mustard pedas!</p>
       </div>
     </div>
 
-    <!-- Currywurst -->
-    <div class="sosis-card sosis-row">
-      <div class="col-md-6 sosis-image" id="currywurst">
-        <img src="img/currywurst.jpg" alt="Currywurst">
+    <!-- Chicken Schnitzel -->
+    <div class="schnitzel-card schnitzel-row">
+      <div class="col-md-6 schnitzel-image" id="chickenschnitzel">
+        <img src="img/Chicken Schnitzel.jpg" alt="chickenschnitzel">
       </div>
-      <div class="col-md-6 sosis-content">
-        <h4>Currywurst</h4>
-        <p>Sosis potong yang disiram saus tomat pedas bercampur bubuk kari. Hidangan street food yang sangat populer di Berlin dan sekitarnya. Rasanya unik dan menggoda, cocok untuk pencinta rasa berani!</p>
+      <div class="col-md-6 schnitzel-content">
+        <h4>Chicken Schnitzel</h4>
+        <p>schnitzel potong yang disiram saus tomat pedas bercampur bubuk kari. Hidangan street food yang sangat populer di Berlin dan sekitarnya. Rasanya unik dan menggoda, cocok untuk pencinta rasa berani!</p>
       </div>
     </div>
 
-    <!-- Weisswurst -->
-    <div class="sosis-card sosis-row">
-      <div class="col-md-6 sosis-image" id="weisswurst">
-        <img src="img/weisswurst.jpg" alt="Weisswurst">
+    <!-- Turkey Schnitzel -->
+    <div class="schnitzel-card schnitzel-row">
+      <div class="col-md-6 schnitzel-image" id="turkeyschnitzel">
+        <img src="img/Turkey Schnitzel.jpg" alt="turkeyschnitzel">
       </div>
-      <div class="col-md-6 sosis-content">
-        <h4>Weisswurst</h4>
-        <p>Sosis putih khas Bavaria, biasanya terbuat dari daging sapi muda dan bumbu segar seperti peterseli. Weisswurst direbus dan disajikan bersama pretzel dan mustard manis. Biasanya dinikmati saat sarapan atau brunch.</p>
+      <div class="col-md-6 schnitzel-content">
+        <h4>Turkey Schnitzel</h4>
+        <p>schnitzel putih khas Bavaria, biasanya terbuat dari daging sapi muda dan bumbu segar seperti peterseli. Weisswurst direbus dan disajikan bersama pretzel dan mustard manis. Biasanya dinikmati saat sarapan atau brunch.</p>
       </div>
     </div>
     
-    <!-- Bockwurst -->
-    <div class="sosis-card sosis-row">
-      <div class="col-md-6 sosis-image" id="bockwurst">
-        <img src="img/bockwurst.jpg" alt="Bockwurst">
+    <!-- Beef Schnitzel -->
+    <div class="schnitzel-card schnitzel-row">
+      <div class="col-md-6 schnitzel-image" id="beefschnitzel">
+        <img src="img/Beef Schnitzel.jpg" alt="beefschnitzel">
       </div>
-      <div class="col-md-6 sosis-content">
-        <h4>Bockwurst</h4>
-        <p>Sosis ini biasanya dibuat dari campuran daging sapi dan babi, dibumbui dengan garam, lada putih, dan rempah-rempah seperti peterseli atau daun bawang. Bockwurst direbus dan sering disajikan dengan roti dan mustard. Cocok disantap bersama bir tradisional Jerman, terutama saat musim semi atau festival rakyat.</p>
+      <div class="col-md-6 schnitzel-content">
+        <h4>Beef Schnitzel</h4>
+        <p>schnitzel ini biasanya dibuat dari campuran daging sapi dan babi, dibumbui dengan garam, lada putih, dan rempah-rempah seperti peterseli atau daun bawang. Bockwurst direbus dan sering disajikan dengan roti dan mustard. Cocok disantap bersama bir tradisional Jerman, terutama saat musim semi atau festival rakyat.</p>
       </div>
     </div>
   </div>
