--- a/Schnitzel.html
+++ b/Schnitzel.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sosis Jerman</title>
+  <title>Schnitzel Jerman</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
@@ -60,7 +60,7 @@
       text-align: center;
       letter-spacing: 2px;
     }
-    .sosis-list li {
+    .schnitzel-list li {
       margin-bottom: 0.8rem;
       font-size: 1.13rem;
     }
@@ -73,7 +73,7 @@
       font-size: 1.1rem;
       box-shadow: 0 2px 10px rgba(0,0,0,0.03);
     }
-    .img-sosis {
+    .img-schnitzel {
       width: 100%;
       max-width: 600px;
       height: auto;
@@ -83,7 +83,7 @@
       box-shadow: 0 4px 16px rgba(0,0,0,0.08);
       transition: transform 0.3s;
     }
-    .img-sosis:hover {
+    .img-schnitzel:hover {
       transform: scale(1.04);
     }
     .gallery-title {
@@ -191,52 +191,52 @@
     </div>
   </nav>
 
-  <img src="img/BgSosis.jpg" alt="Sosis Jerman" class="hero-image w-100">
+  <img src="img/schnitzell.webp" alt="Schnitzel Jerman" class="hero-image w-100">
 
   <div class="content container">
-    <h1 class="section-title">Sosis Terkenal di Jerman</h1>
+    <h1 class="section-title">Schnitzel Terkenal di Jerman</h1>
     <p class="text-center mb-4">
-      Sosis adalah salah satu ikon kuliner Jerman yang mendunia. Negara ini memiliki lebih dari <b>1.500 jenis sosis</b> dengan rasa, bentuk, dan cara penyajian yang unik di setiap daerah.<br>Berikut beberapa sosis paling populer:
+        Schnitzel adalah hidangan daging yang digoreng tepung hingga renyah, sangat populer di Jerman dan negara-negara Eropa lainnya. Disajikan dengan kentang, lemon, atau salad segar, schnitzel menawarkan rasa klasik yang memanjakan lidah. Berikut beberapa jenis schnitzel paling digemari:
     </p>
-    <ul class="sosis-list">
-      <li><strong>Bratwurst</strong> - Sosis panggang khas Nürnberg, gurih dan juicy.</li>
-      <li><strong>Currywurst</strong> - Street food favorit, disajikan dengan saus kari tomat pedas.</li>
-      <li><strong>Weisswurst</strong> - Sosis putih dari Bavaria, nikmat disantap hangat dengan pretzel dan mustard manis.</li>
-      <li><strong>Bockwurst</strong> - Sosis rebus yang lembut, sering disantap bersama roti dan bir.</li>
+    <ul class="schnitzel-list">
+        <li><strong>Wiener Schnitzel</strong> – Asli Austria namun sangat populer di Jerman, terbuat dari daging sapi muda yang digoreng tepung dengan tekstur renyah dan rasa lembut.</li>
+        <li><strong>Chicken Schnitzel</strong> – Versi ayam yang ringan dan juicy, cocok untuk semua usia.</li>
+        <li><strong>Turkey Schnitzel</strong> – Alternatif rendah lemak, tetap gurih dan nikmat dengan rasa khas kalkun.</li>
+        <li><strong>Beef Schnitzel</strong> – Lebih kaya rasa, cocok bagi pencinta daging merah dengan tekstur padat dan kenyal.</li>
     </ul>
     
     <div class="fun-fact">
-      <b>Fun Fact:</b> Orang Jerman rata-rata mengonsumsi lebih dari <b>60 kg sosis per tahun</b>. Bahkan, di Berlin ada museum khusus Currywurst!
+        <b>Fun Fact:</b> Meskipun berasal dari Austria, Schnitzel telah menjadi makanan pokok di banyak rumah Jerman. Bahkan ada "Schnitzel Day" di beberapa restoran sebagai promosi mingguan!
     </div>
 
-    <img src="img/BgSosis1.webp" alt="Currywurst" class="img-sosis">
+    <img src="img/schnitzel.jpg" alt="Currywurst" class="img-schnitzel">
 
-    <h2 class="gallery-title">Galeri Sosis Jerman</h2>
+    <h2 class="gallery-title">Galeri Schnitzel Jerman</h2>
     <div class="gallery">
       <div class="gallery-item">
-        <img src="img/Bratwurst.jpg" alt="Bratwurst">
-        <a href="MenuSosis.html#bratwurst" class="btn-below">Explore</a>
+        <img src="img/Wiener Schnitzel.jpg" alt="wienerschnitzel">
+        <a href="MenuSchnitzel" class="btn-below">Explore</a>
       </div>
       <div class="gallery-item">
-        <img src="img/Currywurst.jpg" alt="Currywurst.jpg">
-        <a href="MenuSosis.html#currywurst" class="btn-below">Explore</a>
+        <img src="img/Chicken Schnitzel.jpg" alt="chickenschnitzel">
+        <a href="MenuSchnitzel.html#currywurst" class="btn-below">Explore</a>
       </div>
       <div class="gallery-item">
-        <img src="img/weisswurst.jpg" alt="weisswurst">
-        <a href="MenuSosis.html#weisswurst" class="btn-below">Explore</a>
+        <img src="img/Turkey Schnitzel.jpg" alt="turkeyschnitzel">
+        <a href="MenuSchnitzel.html#weisswurst" class="btn-below">Explore</a>
       </div>
       <div class="gallery-item">
-        <img src="img/Bockwurst.jpg" alt="bockwrust">
-        <a href="MenuSosis.html#bockwurst" class="btn-below">Explore</a>
+        <img src="img/Beef Schnitzel.jpg" alt="beefschnitzel">
+        <a href="MenuSchnitzel.html#bockwurst" class="btn-below">Explore</a>
       </div>
     </div>
 
     <div class="tips-box">
-      <b>Tips Penyajian:</b> Sosis Jerman paling nikmat disantap dengan pretzel, sauerkraut (kubis asam), dan mustard. Untuk pengalaman otentik, coba padukan dengan bir Jerman favorit!
+        <b>Tips Penyajian:</b> Schnitzel paling lezat disajikan hangat dengan kentang goreng, kentang rebus, atau salad segar. Tambahkan irisan lemon untuk sentuhan rasa asam yang menyegarkan. Jangan lupa cocolan saus tartar atau mustard untuk pengalaman maksimal!
     </div>
 
     <p class="text-center">
-      Banyak wisatawan mencicipi berbagai jenis sosis saat berkunjung ke Jerman, terutama saat festival makanan seperti <b>Oktoberfest</b>. Nikmati kelezatan sosis langsung dari negara asalnya!
+        Schnitzel adalah simbol kelezatan kuliner Eropa yang sederhana namun menggoda. Saat berkunjung ke Jerman, jangan lewatkan kesempatan mencicipi berbagai variasi schnitzel yang menggugah selera—baik di restoran tradisional maupun di festival makanan lokal!
     </p>
   </div>
 
