--- a/home.html
+++ b/home.html
@@ -145,8 +145,9 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Food</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="Sosis.html">Sausage</a></li>
-              <li><a class="dropdown-item" href="#">Schnitzel</a></li>
+              <li><a class="dropdown-item" href="Sosis.html">Wurst</a></li>
+              <li><a class="dropdown-item" href="MenuSchnitzel.html">Schnitzel</a></li>
+              <li><a class="dropdown-item" href="#">Brot</a></li>
             </ul>
           </li>
           <li class="nav-item"><a class="nav-link" href="#minuman">Drink</a></li>
