--- a/home.html
+++ b/home.html
@@ -146,7 +146,7 @@
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Food</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="Sosis.html">Wurst</a></li>
-              <li><a class="dropdown-item" href="MenuSchnitzel.html">Schnitzel</a></li>
+              <li><a class="dropdown-item" href="Schnitzel.html">Schnitzel</a></li>
               <li><a class="dropdown-item" href="#">Brot</a></li>
             </ul>
           </li>
