--- a/MenuSchnitzel.html
+++ b/MenuSchnitzel.html
@@ -64,15 +64,18 @@
       margin-top: 40px;
       margin-bottom: 80px;
       overflow: hidden;
-
     }
 
-    .schnitzel-card img {
+    .schnitzel-image {
+      height: 300px;
+      overflow: hidden;
+    }
+    
+    .schnitzel-image img {
+      width: 100%;
       height: 100%;
       object-fit: cover;
-      width: 100%;
     }
-
     .schnitzel-content {
       padding: 30px;
     }
@@ -106,6 +109,11 @@
       }
       .schnitzel-row:nth-child(even) .schnitzel-image {
         order: 2;
+      }
+    }
+    @media (max-width: 767px) {
+      .schnitzel-image img {
+        height: 200px;
       }
     }
   </style>
