--- a/Schnitzel.html
+++ b/Schnitzel.html
@@ -191,7 +191,7 @@
     </div>
   </nav>
 
-  <img src="img/schnitzell.webp" alt="Schnitzel Jerman" class="hero-image w-100">
+  <img src="img/schnitzel.jpg" alt="Schnitzel Jerman" class="hero-image w-100">
 
   <div class="content container">
     <h1 class="section-title">Schnitzel Terkenal di Jerman</h1>
@@ -199,35 +199,35 @@
         Schnitzel adalah hidangan daging yang digoreng tepung hingga renyah, sangat populer di Jerman dan negara-negara Eropa lainnya. Disajikan dengan kentang, lemon, atau salad segar, schnitzel menawarkan rasa klasik yang memanjakan lidah. Berikut beberapa jenis schnitzel paling digemari:
     </p>
     <ul class="schnitzel-list">
-        <li><strong>Wiener Schnitzel</strong> – Asli Austria namun sangat populer di Jerman, terbuat dari daging sapi muda yang digoreng tepung dengan tekstur renyah dan rasa lembut.</li>
-        <li><strong>Chicken Schnitzel</strong> – Versi ayam yang ringan dan juicy, cocok untuk semua usia.</li>
-        <li><strong>Turkey Schnitzel</strong> – Alternatif rendah lemak, tetap gurih dan nikmat dengan rasa khas kalkun.</li>
-        <li><strong>Beef Schnitzel</strong> – Lebih kaya rasa, cocok bagi pencinta daging merah dengan tekstur padat dan kenyal.</li>
+        <li><strong>Wiener Schnitzel</strong> - Asli Austria namun sangat populer di Jerman, terbuat dari daging sapi muda yang digoreng tepung dengan tekstur renyah dan rasa lembut.</li>
+        <li><strong>Chicken Schnitzel</strong> - Versi ayam yang ringan dan juicy, cocok untuk semua usia.</li>
+        <li><strong>Turkey Schnitzel</strong> - Alternatif rendah lemak, tetap gurih dan nikmat dengan rasa khas kalkun.</li>
+        <li><strong>Beef Schnitzel</strong> - Lebih kaya rasa, cocok bagi pencinta daging merah dengan tekstur padat dan kenyal.</li>
     </ul>
     
     <div class="fun-fact">
         <b>Fun Fact:</b> Meskipun berasal dari Austria, Schnitzel telah menjadi makanan pokok di banyak rumah Jerman. Bahkan ada "Schnitzel Day" di beberapa restoran sebagai promosi mingguan!
     </div>
 
-    <img src="img/schnitzel.jpg" alt="Currywurst" class="img-schnitzel">
+    <img src="img/schnitzell.webp~" alt="Currywurst" class="img-schnitzel">
 
     <h2 class="gallery-title">Galeri Schnitzel Jerman</h2>
     <div class="gallery">
       <div class="gallery-item">
         <img src="img/Wiener Schnitzel.jpg" alt="wienerschnitzel">
-        <a href="MenuSchnitzel" class="btn-below">Explore</a>
+        <a href="MenuSchnitzel#wienerschnitzel" class="btn-below">Explore</a>
       </div>
       <div class="gallery-item">
         <img src="img/Chicken Schnitzel.jpg" alt="chickenschnitzel">
-        <a href="MenuSchnitzel.html#currywurst" class="btn-below">Explore</a>
+        <a href="MenuSchnitzel.html#chickenschnitzel" class="btn-below">Explore</a>
       </div>
       <div class="gallery-item">
         <img src="img/Turkey Schnitzel.jpg" alt="turkeyschnitzel">
-        <a href="MenuSchnitzel.html#weisswurst" class="btn-below">Explore</a>
+        <a href="MenuSchnitzel.html#turkeyschnitzel" class="btn-below">Explore</a>
       </div>
       <div class="gallery-item">
         <img src="img/Beef Schnitzel.jpg" alt="beefschnitzel">
-        <a href="MenuSchnitzel.html#bockwurst" class="btn-below">Explore</a>
+        <a href="MenuSchnitzel.html#beefschnitzel" class="btn-below">Explore</a>
       </div>
     </div>
 
