Schnitzel and About Us Update

--- a/home.html
+++ b/home.html
@@ -146,14 +146,14 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Food</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="Sosis.html">Wurst</a></li>
-              <li><a class="dropdown-item" href="#">Schnitzel</a></li>
+              <li><a class="dropdown-item" href="sosis.html">Wurst</a></li>
+              <li><a class="dropdown-item" href="schnitzel.html">Schnitzel</a></li>
               <li><a class="dropdown-item" href="#">Brot</a></li>
             </ul>
           </li>
           <li class="nav-item"><a class="nav-link" href="#minuman">Drink</a></li>
           <li class="nav-item"><a class="nav-link" href="fact.html">Fact</a></li>
-          <li class="nav-item"><a class="nav-link" href="#kontak">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
         </ul>
       </div>
     </div>
