--- a/fact.html
+++ b/fact.html
@@ -161,7 +161,7 @@
               <li><a class="dropdown-item" href="#">Brot</a></li>
             </ul>
           </li>
-          <li class="nav-item"><a class="nav-link" href="#minuman">Drink</a></li>
+          <li class="nav-item"><a class="nav-link" href="drink.html">Drink</a></li>
           <li class="nav-item"><a class="nav-link" href="fact.html">Fact</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
         </ul>
