--- a/menubrot.html
+++ b/menubrot.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Menu Sosis Jerman</title>
+  <title>Menu Roti Jerman</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -40,25 +40,26 @@
         background-color: rgba(255, 255, 255, 0.2);
         color: white;
     }
-    .sosis-section {
+    .brot-section {
         padding: 60px 20px;
     }
-    .sosis-card {
+    .brot-card {
+        background-color: #ffffff;
         border-radius: 12px;
         box-shadow: 0 3px 8px rgba(0,0,0,0.1);
         margin-top: 40px;
         margin-bottom: 80px;
         overflow: hidden;
     }
-    .sosis-card img {
+    .brot-card img {
         height: 400px;
         object-fit: cover;
         width: 100%;
     }
-    .sosis-image {
+    .brot-image {
         scroll-margin-top: 100px;
     }
-    .sosis-content {
+    .brot-content {
         padding: 30px;
     }
     h2 {
@@ -67,17 +68,17 @@
         text-align: center;
     }
     footer {
-        background-color: black;
+        background-color: #000;
         color: white;
         padding: 20px 0;
         text-align: center;
     }
     @media (min-width: 768px) {
-        .sosis-row {
+        .brot-row {
           display: flex;
           align-items: center;
         }
-        .sosis-row:nth-child(even) .sosis-image {
+        .brot-row:nth-child(even) .brot-image {
           order: 2;
         }
     }
@@ -110,46 +111,46 @@
     </div>
 </nav>
 
-<div class="container sosis-section">
-    <h2>Menu Sosis Terkenal di Jerman</h2>
+<div class="container brot-section">
+    <h2>Menu Roti Khas Jerman</h2>
 
-    <div class="sosis-card sosis-row">
-        <div class="col-md-6 sosis-image" id="bratwurst">
-            <img src="img/bratwurst.jpg" alt="Bratwurst">
+    <div class="brot-card brot-row">
+        <div class="col-md-6 brot-image" id="Pumpernickel">
+            <img src="img/Pumpernickel.jpg" alt="Pumpernickel">
         </div>
-        <div class="col-md-6 sosis-content">
-            <h4>Bratwurst</h4>
-            <p>Sosis khas Jerman yang biasanya dipanggang dan disajikan dengan roti atau sauerkraut. Berasal dari Nürnberg, Bratwurst memiliki rasa gurih dan aroma rempah yang khas. Cocok disantap dengan mustard pedas!</p>
+        <div class="col-md-6 brot-content">
+            <h4>Pumpernickel</h4>
+            <p>Roti hitam khas wilayah Westphalia, dibuat dari gandum hitam kasar dan dimasak perlahan selama berjam-jam. Teksturnya padat dan rasa manis alaminya menjadi ciri khas yang unik.</p>
         </div>
     </div>
 
-    <div class="sosis-card sosis-row">
-        <div class="col-md-6 sosis-image" id="currywurst">
-            <img src="img/currywurst.jpg" alt="Currywurst">
+    <div class="brot-card brot-row">
+        <div class="col-md-6 brot-image" id="Vollkornbrot">
+            <img src="img/Vollkornbrot.webp" alt="Vollkornbrot">
         </div>
-        <div class="col-md-6 sosis-content">
-            <h4>Currywurst</h4>
-            <p>Sosis potong yang disiram saus tomat pedas bercampur bubuk kari. Hidangan street food yang sangat populer di Berlin dan sekitarnya. Rasanya unik dan menggoda, cocok untuk pencinta rasa berani!</p>
-        </div>
-    </div>
-
-    <div class="sosis-card sosis-row">
-        <div class="col-md-6 sosis-image" id="weisswurst">
-            <img src="img/weisswurst.jpg" alt="Weisswurst">
-        </div>
-        <div class="col-md-6 sosis-content">
-            <h4>Weisswurst</h4>
-            <p>Sosis putih khas Bavaria, biasanya terbuat dari daging sapi muda dan bumbu segar seperti peterseli. Weisswurst direbus dan disajikan bersama pretzel dan mustard manis. Biasanya dinikmati saat sarapan atau brunch.</p>
+        <div class="col-md-6 brot-content">
+            <h4>Vollkornbrot</h4>
+            <p>Roti gandum utuh yang kaya serat, nutrisi, dan rasa. Teksturnya padat dan sedikit lembap, cocok disantap bersama keju atau daging dingin sebagai sarapan atau makan malam ringan.</p>
         </div>
     </div>
 
-    <div class="sosis-card sosis-row">
-        <div class="col-md-6 sosis-image" id="bockwurst">
-            <img src="img/bockwurst.jpg" alt="Bockwurst">
+    <div class="brot-card brot-row">
+        <div class="col-md-6 brot-image" id="Roggenmischbrot">
+            <img src="img/Roggenmischbrot.jpg" alt="Roggenmischbrot">
         </div>
-        <div class="col-md-6 sosis-content">
-            <h4>Bockwurst</h4>
-            <p>Sosis ini biasanya dibuat dari campuran daging sapi dan babi, dibumbui dengan garam, lada putih, dan rempah-rempah seperti peterseli atau daun bawang. Bockwurst direbus dan sering disajikan dengan roti dan mustard. Cocok disantap bersama bir tradisional Jerman, terutama saat musim semi atau festival rakyat.</p>
+        <div class="col-md-6 brot-content">
+            <h4>Roggenmischbrot</h4>
+            <p>Campuran tepung gandum dan gandum hitam menghasilkan roti dengan rasa sedikit asam dan tekstur lembut. Ini adalah salah satu jenis roti paling umum di Jerman dan sering digunakan untuk sandwich.</p>
+        </div>
+    </div>
+
+    <div class="brot-card brot-row">
+        <div class="col-md-6 brot-image" id="Weissbrot">
+            <img src="img/Weissbrot.jpg" alt="Weissbrot">
+        </div>
+        <div class="col-md-6 brot-content">
+            <h4>Weissbrot</h4>
+            <p>Roti putih yang lebih umum ditemukan di wilayah selatan Jerman. Teksturnya ringan dan lembut, mirip seperti baguette, dan biasanya disantap segar atau dijadikan roti lapis.</p>
         </div>
     </div>
 </div>
