--- a/Schnitzel.html
+++ b/Schnitzel.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Schnitzel Jerman</title>
+  <title>schnitzel Jerman</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
@@ -127,12 +127,23 @@
       font-size: 0.9rem;
       font-weight: 500;
       text-decoration: none;
+      position: absolute;
+      left: 50%;
+      bottom: 12px;
+      transform: translateX(-50%);
+      width: 80%;
     }
 
     .btn-below:hover {
       background: rgba(0, 0, 0, 0.8);
     }
-
+    .btn-outline-warning.btn-below:hover,
+    .btn-outline-warning.btn-below:focus {
+      background-color: #ffc107;
+      color: #fff;
+      border-color: #ffc107;
+      text-decoration: none;
+    }
     .tips-box {
       background: #e3f7f7;
       padding: 18px 20px;
@@ -166,84 +177,94 @@
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
-    <div class="container-fluid px-4">
-      <a class="navbar-brand fw-bold" href="home.html">gutes Essen</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarContent">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Food</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="Sosis.html">Wurst</a></li>
-              <li><a class="dropdown-item" href="Schnitzel.html">Schnitzel</a></li>
-              <li><a class="dropdown-item" href="#">Brot</a></li>
-            </ul>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="#minuman">Drink</a></li>
-          <li class="nav-item"><a class="nav-link" href="#fakta">Fact</a></li>
-          <li class="nav-item"><a class="nav-link" href="#kontak">About Us</a></li>
+    <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
+        <div class="container-fluid px-4">
+            <a class="navbar-brand fw-bold text-warning" href="home.html">gutes Essen</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarContent">
+              <ul class="navbar-nav ms-auto">
+                  <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Food</a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="sosis.html">Wurst</a></li>
+                      <li><a class="dropdown-item" href="schnitzel.html">Schnitzel</a></li>
+                      <li><a class="dropdown-item" href="brot.html">Brot</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item"><a class="nav-link" href="drink.html">Drink</a></li>
+                  <li class="nav-item"><a class="nav-link" href="fact.html">Fact</a></li>
+                  <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+              </ul>
+            </div>
+        </div>
+    </nav>
+
+    <img src="img/schnitzel.jpg" alt="schnitzel Jerman" class="hero-image w-100">
+
+    <div class="content container">
+        <h1 class="section-title">Schnitzel Terkenal di Jerman</h1>
+        <p class="text-center mb-4">
+            Schnitzel adalah hidangan daging yang digoreng tepung hingga renyah, sangat populer di Jerman dan negara-negara Eropa lainnya. Disajikan dengan kentang, lemon, atau salad segar, schnitzel menawarkan rasa klasik yang memanjakan lidah. Berikut beberapa jenis schnitzel paling digemari:
+        </p>
+        <ul class="schnitzel-list">
+            <li><strong>Wiener Schnitzel</strong> - Asli Austria namun sangat populer di Jerman, terbuat dari daging sapi muda yang digoreng tepung dengan tekstur renyah dan rasa lembut.</li>
+            <li><strong>Chicken Schnitzel</strong> - Versi ayam yang ringan dan juicy, cocok untuk semua usia.</li>
+            <li><strong>Turkey Schnitzel</strong> - Alternatif rendah lemak, tetap gurih dan nikmat dengan rasa khas kalkun.</li>
+            <li><strong>Beef Schnitzel</strong> - Lebih kaya rasa, cocok bagi pencinta daging merah dengan tekstur padat dan kenyal.</li>
         </ul>
-      </div>
-    </div>
-  </nav>
 
-  <img src="img/schnitzel.jpg" alt="Schnitzel Jerman" class="hero-image w-100">
+        <div class="fun-fact">
+            <b>Fun Fact:</b> Meskipun berasal dari Austria, Schnitzel telah menjadi makanan pokok di banyak rumah Jerman. Bahkan ada "Schnitzel Day" di beberapa restoran sebagai promosi mingguan!
+        </div>
 
-  <div class="content container">
-    <h1 class="section-title">Schnitzel Terkenal di Jerman</h1>
-    <p class="text-center mb-4">
-        Schnitzel adalah hidangan daging yang digoreng tepung hingga renyah, sangat populer di Jerman dan negara-negara Eropa lainnya. Disajikan dengan kentang, lemon, atau salad segar, schnitzel menawarkan rasa klasik yang memanjakan lidah. Berikut beberapa jenis schnitzel paling digemari:
-    </p>
-    <ul class="schnitzel-list">
-        <li><strong>Wiener Schnitzel</strong> - Asli Austria namun sangat populer di Jerman, terbuat dari daging sapi muda yang digoreng tepung dengan tekstur renyah dan rasa lembut.</li>
-        <li><strong>Chicken Schnitzel</strong> - Versi ayam yang ringan dan juicy, cocok untuk semua usia.</li>
-        <li><strong>Turkey Schnitzel</strong> - Alternatif rendah lemak, tetap gurih dan nikmat dengan rasa khas kalkun.</li>
-        <li><strong>Beef Schnitzel</strong> - Lebih kaya rasa, cocok bagi pencinta daging merah dengan tekstur padat dan kenyal.</li>
-    </ul>
-    
-    <div class="fun-fact">
-        <b>Fun Fact:</b> Meskipun berasal dari Austria, Schnitzel telah menjadi makanan pokok di banyak rumah Jerman. Bahkan ada "Schnitzel Day" di beberapa restoran sebagai promosi mingguan!
-    </div>
+        <img src="img/schnitzell.webp" alt="Currywurst" class="img-schnitzel">
 
-    <img src="img/schnitzell.webp~" alt="Currywurst" class="img-schnitzel">
+        <h2 class="gallery-title">Galeri schnitzel Jerman</h2>
+        <div class="gallery">
+            <div class="gallery-item">
+                <img src="img/Wiener Schnitzel.jpg" alt="wienerschnitzel">
+                <a href="menuschnitzel#wienerschnitzel" class="btn btn-outline-warning btn-below">Explore</a>
+            </div>
+            <div class="gallery-item">
+                <img src="img/Chicken Schnitzel.jpg" alt="chickenschnitzel">
+                <a href="menuschnitzel.html#chickenschnitzel" class="btn btn-outline-warning btn-below">Explore</a>
+            </div>
+            <div class="gallery-item">
+                <img src="img/Turkey Schnitzel.jpg" alt="turkeyschnitzel">
+                <a href="menuschnitzel.html#turkeyschnitzel" class="btn btn-outline-warning btn-below">Explore</a>
+            </div>
+            <div class="gallery-item">
+                <img src="img/Beef Schnitzel.jpg" alt="beefschnitzel">
+                <a href="menuschnitzel.html#beefschnitzel" class="btn btn-outline-warning btn-below">Explore</a>
+            </div>
+        </div>
 
-    <h2 class="gallery-title">Galeri Schnitzel Jerman</h2>
-    <div class="gallery">
-      <div class="gallery-item">
-        <img src="img/Wiener Schnitzel.jpg" alt="wienerschnitzel">
-        <a href="MenuSchnitzel#wienerschnitzel" class="btn-below">Explore</a>
-      </div>
-      <div class="gallery-item">
-        <img src="img/Chicken Schnitzel.jpg" alt="chickenschnitzel">
-        <a href="MenuSchnitzel.html#chickenschnitzel" class="btn-below">Explore</a>
-      </div>
-      <div class="gallery-item">
-        <img src="img/Turkey Schnitzel.jpg" alt="turkeyschnitzel">
-        <a href="MenuSchnitzel.html#turkeyschnitzel" class="btn-below">Explore</a>
-      </div>
-      <div class="gallery-item">
-        <img src="img/Beef Schnitzel.jpg" alt="beefschnitzel">
-        <a href="MenuSchnitzel.html#beefschnitzel" class="btn-below">Explore</a>
-      </div>
+        <div class="tips-box">
+            <b>Tips Penyajian:</b> Schnitzel paling lezat disajikan hangat dengan kentang goreng, kentang rebus, atau salad segar. Tambahkan irisan lemon untuk sentuhan rasa asam yang menyegarkan. Jangan lupa cocolan saus tartar atau mustard untuk pengalaman maksimal!
+        </div>
+
+        <p class="text-center">
+            Schnitzel adalah simbol kelezatan kuliner Eropa yang sederhana namun menggoda. Saat berkunjung ke Jerman, jangan lewatkan kesempatan mencicipi berbagai variasi schnitzel yang menggugah selera—baik di restoran tradisional maupun di festival makanan lokal!
+        </p>
     </div>
 
-    <div class="tips-box">
-        <b>Tips Penyajian:</b> Schnitzel paling lezat disajikan hangat dengan kentang goreng, kentang rebus, atau salad segar. Tambahkan irisan lemon untuk sentuhan rasa asam yang menyegarkan. Jangan lupa cocolan saus tartar atau mustard untuk pengalaman maksimal!
+    <div class="footer">
+        <a href="#" class="back-to-top">↑ Back to top</a>
+        <p>Copyright by ©gutes Essen 2025. All rights reserved.</p>
     </div>
 
-    <p class="text-center">
-        Schnitzel adalah simbol kelezatan kuliner Eropa yang sederhana namun menggoda. Saat berkunjung ke Jerman, jangan lewatkan kesempatan mencicipi berbagai variasi schnitzel yang menggugah selera—baik di restoran tradisional maupun di festival makanan lokal!
-    </p>
-  </div>
-
-  <div class="footer">
-    <p>Copyright by ©gutes Essen 2025. All rights reserved.</p>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.querySelectorAll('.gallery-item').forEach(function(item) {
+            item.addEventListener('click', function() {
+                item.style.boxShadow = '0 0 0 4px #ffc107, 0 4px 18px rgba(0,0,0,0.15)';
+                    setTimeout(function() {
+                      item.style.boxShadow = '';
+                }, 500);
+            });
+        });
+    </script>
 </body>
 </html>
