--- a/about.html
+++ b/about.html
@@ -7,26 +7,30 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Montserrat', Arial, sans-serif;
       background: #fffefa;
       margin: 0;
     }
 
     .navbar {
-      background-color: #000;
+      background-color: rgba(0, 0, 0, 0.8);
     }
 
     .navbar-brand {
-      color: #00aaff;
+      color: rgb(0, 140, 255);
       font-weight: bold;
     }
 
-    .nav-link {
+    .nav-link, .navbar-brand {
       color: #fff;
+      font-weight: 500;
+      letter-spacing: 1px;
     }
 
     .nav-link:hover {
-      color: #00aaff;
+      background-color: rgba(255, 255, 255, 0.15);
+      border-radius: 5px;
+      transition: 0.3s;
     }
 
     .hero {
@@ -116,22 +120,51 @@
     .back-to-top:hover {
       color: #fff;
     }
+
+    .nav-item.dropdown:hover .dropdown-menu {
+      display: block;
+      margin-top: 0;
+    }
+
+    .dropdown-menu {
+      display: none;
+      transition: all 0.3s ease-in-out;
+      background-color: rgba(0, 0, 0, 0.5);
+      border: none;
+    }
+
+    .dropdown-item {
+      color: white;
+    }
+
+    .dropdown-item:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+      color: white;
+    }
   </style>
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container-fluid px-4">
-      <a class="navbar-brand" href="home.html">gutes Essen</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+  <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
+    <div class="container-fluid px-4 text-warning">
+      <a class="navbar-brand fw-bold text-warning" href="home.html">gutes Essen</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="home.html#minuman">Drink</a></li>
-          <li class="nav-item"><a class="nav-link" href="home.html#fakta">Fact</a></li>
-          <li class="nav-item"><a class="nav-link active" href="#">About Us</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Food</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="sosis.html">Wurst</a></li>
+              <li><a class="dropdown-item" href="schnitzel.html">Schnitzel</a></li>
+              <li><a class="dropdown-item" href="brot.html">Brot</a></li>
+            </ul>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="drink.html">Drink</a></li>
+          <li class="nav-item"><a class="nav-link" href="fact.html">Fact</a></li>
+          <li class="nav-item"><a class="nav-link active" href="about.html">About Us</a></li>
         </ul>
       </div>
     </div>
