--- a/brot.html
+++ b/brot.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sosis Jerman</title>
+  <title>Brot Jerman</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
@@ -60,7 +60,7 @@
         text-align: center;
         letter-spacing: 2px;
     }
-    .schnitzel-list li {
+    .brot-list li {
         margin-bottom: 0.8rem;
         font-size: 1.13rem;
     }
@@ -73,7 +73,7 @@
         font-size: 1.1rem;
         box-shadow: 0 2px 10px rgba(0,0,0,0.03);
     }
-    .img-sosis {
+    .img-brot {
         width: 100%;
         max-width: 600px;
         height: auto;
@@ -83,7 +83,7 @@
         box-shadow: 0 4px 16px rgba(0,0,0,0.08);
         transition: transform 0.3s;
     }
-    .img-sosis:hover {
+    .img-brot:hover {
         transform: scale(1.04);
     }
     .gallery-title {
@@ -201,52 +201,52 @@
         </div>
     </nav>
 
-    <img src="img/bgsosis.jpg" alt="sosis Jerman" class="hero-image w-100">
+    <img src="img/brot.jpg" alt="Brot Jerman" class="hero-image w-100">
 
     <div class="content container">
-        <h1 class="section-title">Sosis Terkenal di Jerman</h1>
+        <h1 class="section-title">Roti Tradisional Jerman</h1>
         <p class="text-center mb-4">
-            Sosis adalah salah satu ikon kuliner Jerman yang mendunia. Negara ini memiliki lebih dari <b>1.500 jenis sosis</b> dengan rasa, bentuk, dan cara penyajian yang unik di setiap daerah.<br>Berikut beberapa sosis paling populer:
+            Jerman dikenal dengan beragam jenis roti (Brot) yang khas, kaya rasa, dan bernutrisi. Dari yang padat dan gelap hingga yang ringan dan putih, roti merupakan bagian penting dalam kehidupan sehari-hari masyarakat Jerman. Berikut ini beberapa jenis roti yang wajib kamu coba:
         </p>
-        <ul class="sosis-list">
-            <li><strong>Bratwurst</strong> - Sosis panggang khas Nürnberg, gurih dan juicy.</li>
-            <li><strong>Currywurst</strong> - Street food favorit, disajikan dengan saus kari tomat pedas.</li>
-            <li><strong>Weisswurst</strong> - Sosis putih dari Bavaria, nikmat disantap hangat dengan pretzel dan mustard manis.</li>
-            <li><strong>Bockwurst</strong> - Sosis rebus yang lembut, sering disantap bersama roti dan bir.</li>
+        <ul class="brot-list">
+            <li><strong>Pumpernickel</strong> - Roti hitam khas Westphalia dengan tekstur padat dan rasa sedikit manis, terbuat dari gandum hitam utuh dan dimasak dalam waktu lama.</li>
+            <li><strong>Vollkornbrot</strong> - Roti gandum utuh yang sangat sehat, mengandung serat tinggi, cocok untuk gaya hidup sehat.</li>
+            <li><strong>Roggenmischbrot</strong> - Campuran tepung gandum dan gandum hitam, teksturnya lembut dan sedikit asam, populer di banyak wilayah.</li>
+            <li><strong>Weißbrot</strong> - Roti putih yang ringan dan empuk, lebih umum ditemukan di bagian selatan Jerman.</li>
         </ul>
     
         <div class="fun-fact">
-            <b>Fun Fact:</b> Orang Jerman rata-rata mengonsumsi lebih dari <b>60 kg sosis per tahun</b>. Bahkan, di Berlin ada museum khusus Currywurst!
+            <b>Fun Fact:</b> Di Jerman, terdapat lebih dari 3.000 jenis roti yang diakui! Bahkan ada museum khusus roti di Ulm dan Ebergötzen.
         </div>
 
-        <img src="img/bgsosis1.webp" alt="Currywurst" class="img-sosis">
+        <img src="img/brott.jpg" alt="Aneka Brot Jerman" class="img-brot">
 
-        <h2 class="gallery-title">Galeri Sosis Jerman</h2>
+        <h2 class="gallery-title">Galeri Roti Jerman</h2>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="img/Bratwurst.jpg" alt="Bratwurst">
-                <a href="menusosis.html#bratwurst" class="btn btn-outline-warning btn-below">Explore</a>
+                <img src="img/Pumpernickel.jpg" alt="pumpernickel">
+                <a href="menubrot.html#Pumpernickel" class="btn btn-outline-warning btn-below">Explore</a>
             </div>
             <div class="gallery-item">
-                <img src="img/Currywurst.jpg" alt="Currywurst.jpg">
-                <a href="menusosis.html#currywurst" class="btn btn-outline-warning btn-below">Explore</a>
+                <img src="img/Vollkornbrot.webp" alt="vollkornbrot">
+                <a href="menubrot.html#Vollkornbrot" class="btn btn-outline-warning btn-below">Explore</a>
             </div>
             <div class="gallery-item">
-                <img src="img/weisswurst.jpg" alt="weisswurst">
-                <a href="menusosis.html#weisswurst" class="btn btn-outline-warning btn-below">Explore</a>
+                <img src="img/Roggenmischbrot.jpg" alt="roggenmischbrot">
+                <a href="menubrot.html#Roggenmischbrot" class="btn btn-outline-warning btn-below">Explore</a>
             </div>
             <div class="gallery-item">
-                <img src="img/Bockwurst.jpg" alt="bockwrust">
-                <a href="menusosis.html#bockwurst" class="btn btn-outline-warning btn-below">Explore</a>
+                <img src="img/Weissbrot.jpg" alt="weissbrot">
+                <a href="menubrot.html#Weissbrot" class="btn btn-outline-warning btn-below">Explore</a>
             </div>
         </div>
 
         <div class="tips-box">
-            <b>Tips Penyajian:</b> Sosis Jerman paling nikmat disantap dengan pretzel, sauerkraut (kubis asam), dan mustard. Untuk pengalaman otentik, coba padukan dengan bir Jerman favorit!
+            <b>Tips Penyajian:</b> Roti Jerman paling nikmat disantap dengan keju, selai buah, atau daging asap. Bisa juga dipadukan dengan sup atau salad untuk menu makan siang yang sehat dan mengenyangkan.
         </div>
 
         <p class="text-center">
-            Banyak wisatawan mencicipi berbagai jenis sosis saat berkunjung ke Jerman, terutama saat festival makanan seperti <b>Oktoberfest</b>. Nikmati kelezatan sosis langsung dari negara asalnya!
+            Brot adalah bagian penting dari budaya kuliner Jerman. Setiap daerah memiliki variasi khas yang mencerminkan sejarah dan bahan lokal. Jangan lewatkan pengalaman mencicipi berbagai jenis brot saat berkunjung ke Jerman!
         </p>
     </div>
 
