--- a/Schnitzel.html
+++ b/Schnitzel.html
@@ -226,7 +226,7 @@
         <div class="gallery">
             <div class="gallery-item">
                 <img src="img/Wiener Schnitzel.jpg" alt="wienerschnitzel">
-                <a href="menuschnitzel#wienerschnitzel" class="btn btn-outline-warning btn-below">Explore</a>
+                <a href="menuschnitzel.html#wienerschnitzel" class="btn btn-outline-warning btn-below">Explore</a>
             </div>
             <div class="gallery-item">
                 <img src="img/Chicken Schnitzel.jpg" alt="chickenschnitzel">
@@ -252,7 +252,6 @@
     </div>
 
     <div class="footer">
-        <a href="#" class="back-to-top">↑ Back to top</a>
         <p>Copyright by ©gutes Essen 2025. All rights reserved.</p>
     </div>
 
