--- a/PageDrink.html
+++ b/PageDrink.html
@@ -171,13 +171,13 @@
       <b>Fun Fact:</b> Jerman memiliki lebih dari <b>1.300 pabrik bir</b> dan lebih dari 5.000 merek bir yang berbeda. Negara ini juga menjadi tuan rumah <b>Oktoberfest</b>, festival bir terbesar di dunia!
     </div>
 
-    <img src="img/GermanBeer.jpeg" alt="Beer" class="img-beer">
+    <img src="img/beerer.jpg" alt="Beer" class="img-beer">
 
     <h2 class="gallery-title">Galeri Beer Jerman</h2>
     <div class="gallery">
       <img src="img/Apfelschorle.jpg" alt="Apfelschorle">
       <img src="img/Beer.jpg" alt="Beer">
-      <img src="img/Radler.jpg" alt="Radler">
+      <img src="img/radler2.jpg" alt="Radler">
       <img src="img/Spezi.jpg" alt="Spezi">
     </div>
 
